--- a/styles/global.css
+++ b/styles/global.css
@@ -15,3 +15,52 @@ body {
 	height: 100%;
 	position: relative;
 }
+/* navbar */
+.navbar {
+	border: 0;
+	font-size: 16px !important;
+	line-height: 1.42857143 !important;
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	backdrop-filter: blur(10px) brightness(0.7);
+	list-style: none;
+	width: 100%;
+	display: flex;
+	padding: 6px;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.navbarLogo {
+	height: 100%;
+	width: max-content;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.navbarLogo a {
+	color: #fff;
+	text-decoration: none;
+}
+/* navbar__container */
+.navbar__container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+/* navbar__menu */
+.navbar__menu > ul {
+	display: flex;
+	justify-content: space-evenly;
+	padding: 2px;
+	height: 100%;
+}
+.navbar__menu > ul > li {
+	margin: 0 20px;
+	list-style: none;
+}
+.navbar__menu > ul > li > a {
+	color: #fff;
+	text-decoration: none;
+}
