--- a/styles/global.css
+++ b/styles/global.css
@@ -21,9 +21,9 @@ body {
 	font-size: 16px !important;
 	line-height: 1.42857143 !important;
 	position: absolute;
-	z-index: 1;
+	z-index: 4;
 	top: 0;
-	backdrop-filter: blur(10px) brightness(0.7);
+	backdrop-filter: blur(10px) brightness(0.8);
 	list-style: none;
 	width: 100%;
 	display: flex;
@@ -31,36 +31,36 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 }
-.navbarLogo {
+.navbar-logo {
 	height: 100%;
 	width: max-content;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.navbarLogo a {
+.navbar-logo a {
 	color: #fff;
 	text-decoration: none;
 }
 /* navbar__container */
-.navbar__container {
+.navbar-container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 }
 /* navbar__menu */
-.navbar__menu > ul {
+.navbar-menu > ul {
 	display: flex;
 	justify-content: space-evenly;
 	padding: 2px;
 	height: 100%;
 }
-.navbar__menu > ul > li {
+.navbar-menu > ul > li {
 	margin: 0 20px;
 	list-style: none;
 }
-.navbar__menu > ul > li > a {
+.navbar-menu > ul > li > a {
 	color: #fff;
 	text-decoration: none;
 }
