--- a/styles/main.css
+++ b/styles/main.css
@@ -4,30 +4,31 @@
 	background-size: cover;
 	background-position: center;
 	background-clip: border-box;
-	backdrop-filter: blur(8px) brightness(0.5);
 	z-index: 0;
 	height: 100%;
 	width: 100%;
 	color: #fff;
 	display: flex;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+	align-content: center;
 	text-align: center;
-	/* bafilter: ; */
 }
 
-.banner-content > h1 {
+.banner-content {
 	padding: 0 20px;
-	background-color: linear-gradient(90deg, #000000, #000000);
-	color: rgb(140, 140, 140);
-}
-
-/* container */
-.container {
+	/* border-radius: 24px; */
+	backdrop-filter: brightness(0.6);
 	width: 100%;
-	max-width: 80%;
-	margin: 0 auto;
-	/* padding: 0 20px; */
+	height: 100%;
+	/* line-height: 10px; */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: rgb(255, 255, 255);
+	/* z-index: 1; */
 }
 
 /* arrowBottom  */
@@ -36,6 +37,7 @@
 	width: 50px;
 	color: #fff;
 	filter: brightness(0) invert(1);
+	/* rotate to 90 deg */
 	bottom: 20px;
 	left: 50%;
 	transform: translateX(-50%);
@@ -44,11 +46,12 @@
 
 @keyframes bounce {
 	0%,
-	20%,
+	/* 20%, */
 	50%,
 	80%,
 	100% {
 		transform: translateY(0);
+		transform: rotate(270deg);
 	}
 	40% {
 		transform: translateY(-30px);
