--- a/styles/about.css
+++ b/styles/about.css
@@ -1,23 +1,28 @@
 .banner {
 	width: 100%;
-	height: 60%;
+	height: max-content;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	justify-content: start;
 	align-items: center;
 	flex-wrap: wrap;
+	box-sizing: border-box;
 }
 .banner-container {
+	padding: 50px 0;
 	position: relative;
 	z-index: 0;
-	height: 100%;
+	height: 700px;
 	width: 100%;
 	color: #fff;
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: space-evenly;
 	align-items: center;
 	align-content: center;
 	text-align: center;
+	box-sizing: border-box;
 }
 .banner-content {
 	padding: 0 20px;
@@ -33,6 +38,15 @@
 	line-height: 20px;
 	color: #000;
 	/* z-index: 1; */
+	box-sizing: border-box;
+}
+.banner-content h1 {
+	font-size: 3rem;
+}
+.banner-content p {
+	width: 70%;
+	font-size: 1.2rem;
+	line-height: 30px;
 }
 
 .card-body {
@@ -72,4 +86,54 @@
 	font-weight: 300;
 	width: 70%;
 	text-align: center;
+}
+.banner-container > img {
+	width: 40%;
+	animation: bounce 2s infinite ease-in-out alternate;
+}
+
+@keyframes bounce {
+	/* 20%, */
+	0% {
+		transform: translateY(0);
+	}
+
+	100% {
+		transform: translateY(15px);
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.banner {
+		padding-top: 16%;
+	}
+	.banner-container {
+		width: 100%;
+		height: 100%;
+		justify-content: center;
+		flex-direction: column;
+		align-items: center;
+	}
+	.banner-container > .banner-content {
+		width: 100%;
+		height: 100%;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	}
+	.banner-container > img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+	.card {
+		width: 80%;
+		font-size: 13px;
+	}
+	.card > h1 {
+		font-size: 1.5rem;
+	}
+	.card > p {
+		font-size: 1rem;
+	}
 }
