--- a/styles/global.css
+++ b/styles/global.css
@@ -36,15 +36,14 @@ body {
 	border: 0;
 	font-size: 16px !important;
 	line-height: 1.42857143 !important;
-	position: sticky;
 	z-index: 3;
 	top: 0;
-	min-height: 60px;
+	/* min-height: 60px; */
 	max-height: max-content;
 	backdrop-filter: blur(10px) brightness(0.8);
 	width: 100%;
 	display: flex;
-	/* padding: 6px; */
+	padding: 20px 6px;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
