--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,5 @@
 .banner {
-	height: 100%;
+	height: max-content;
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -14,6 +14,7 @@
 	justify-content: center;
 	align-items: center;
 	padding-top: 10%;
+	box-sizing: border-box;
 }
 .project {
 	width: 100%;
@@ -59,16 +60,20 @@
 }
 
 @media screen and (max-width: 768px) {
-	.project {
-		width: 100%;
-		border: 1px solid red;
+	.container {
+		flex-direction: column;
 		height: max-content;
+		justify-content: flex-start;
+		padding-top: 3%;
+	}
+	.project {
+		width: 90%;
+		height: auto;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: wrap;
 		justify-content: flex-start;
-		row-gap: 10%;
-		margin-top: 20%;
+		align-items: center;
 	}
 	.project-card {
 		margin: 30px 0;
