--- a/styles/global.css
+++ b/styles/global.css
@@ -41,6 +41,7 @@ body {
 	/* min-height: 60px; */
 	max-height: max-content;
 	backdrop-filter: blur(10px) brightness(0.8);
+	-webkit-backdrop-filter: blur(10px) brightness(0.8);
 	width: 100%;
 	display: flex;
 	padding: 20px 6px;
