--- a/styles/login.css
+++ b/styles/login.css
@@ -1,6 +1,5 @@
 .banner {
 	margin: 0;
-	padding: auto;
 	height: 100%;
 	width: 100%;
 	display: flex;
@@ -9,34 +8,9 @@
 	align-items: center;
 	align-content: center;
 }
-.container {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-}
-.banner-content {
-	padding: 0 30px;
-	margin-top: -50px;
-	width: 40%;
-	height: max-content;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: flex-start;
-	text-align: left;
-}
 
-.banner-content > img {
-	width: 100%;
-	object-fit: cover;
-}
 .form {
-	width: 60%;
-	max-width: 500px;
+	width: 400px;
 	margin: 0 auto;
 	padding: 20px;
 	border: 1px solid #ccc;
@@ -97,27 +71,12 @@
 
 @media screen and (max-width: 768px) {
 	.banner {
+		border: 1px solid red;
 		padding-top: 30%;
-		justify-content: flex-start;
+		justify-content: center;
 		align-items: flex-start;
 	}
-	.container {
-		height: max-content;
-		flex-wrap: wrap;
-		flex-direction: column;
-		justify-content: center;
-		align-content: center;
-		align-items: center;
-		margin: 0 20px;
-		row-gap: 60px;
-	}
-	.banner-content {
-		order: 2;
-		width: 100%;
-	}
 	.form {
-		order: 1;
-		width: 100%;
-		margin: 0;
+		width: 100vw;
 	}
 }
