--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,4 +1,5 @@
 .banner {
+	background-color: #0e0e0e;
 	margin: 0;
 	padding: auto;
 	height: 100%;
@@ -35,11 +36,13 @@
 	object-fit: cover;
 }
 .form {
+	color: #fff;
 	width: 60%;
 	max-width: 500px;
 	margin: 0 auto;
 	padding: 20px;
-	border: 1px solid #ccc;
+	border: 1px solid #fff;
+	background-color: #000;
 	border-radius: 5px;
 	box-sizing: border-box;
 	display: flex;
@@ -56,10 +59,10 @@
 }
 
 .form-group > label {
+	color: #fff;
 	display: block;
 	font-size: 13px;
 	font-weight: bold;
-	color: #000;
 	margin-bottom: 5px;
 }
 
@@ -80,7 +83,7 @@
 .form > button {
 	width: 86%;
 	padding: 10px;
-	border: none;
+	border: 1px solid #fff;
 	border-radius: 5px;
 	background-color: #000;
 	color: #fff;
@@ -90,7 +93,7 @@
 }
 
 .form > button:hover {
-	background-color: rgba(0, 0, 0, 0.545);
+	background-color: rgba(86, 86, 86, 0.545);
 	color: #fff;
 	cursor: pointer;
 }
