--- a/styles/login.css
+++ b/styles/login.css
@@ -13,13 +13,14 @@
 	width: 400px;
 	margin: 0 auto;
 	padding: 20px;
-	border: 1px solid #ccc;
+	border: 1px solid #fff;
 	border-radius: 5px;
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
+	color: #fff;
 }
 
 .form-group {
@@ -33,7 +34,7 @@
 	display: block;
 	font-size: 13px;
 	font-weight: bold;
-	color: #000;
+	color: #fff;
 	margin-bottom: 5px;
 }
 
@@ -61,10 +62,11 @@
 	font-size: 15px;
 	font-weight: bold;
 	margin: 0 20px;
+	border: 1px solid #fff;
 }
 
 .form > button:hover {
-	background-color: rgba(0, 0, 0, 0.545);
+	background-color: rgba(53, 52, 52, 0.545);
 	color: #fff;
 	cursor: pointer;
 }
