--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,6 @@
 /* banner  */
 .banner {
-	background: url(../images/office.jpeg) no-repeat;
-	background-size: cover;
-	background-position: center;
-	background-clip: border-box;
+	background-color: #0e0e0e;
 	z-index: 0;
 	height: 100%;
 	width: 100%;
@@ -34,31 +31,29 @@
 }
 
 /* arrowBottom  */
-.arrowBottom {
+.animate-fade {
 	position: absolute;
-	width: 50px;
+	width: 20px;
+	height: 20px;
+	border-radius: 100%;
+	background-color: #fff;
 	color: #fff;
 	filter: brightness(0) invert(1);
 	bottom: 20px;
-	left: 48%;
+	left: 50%;
 	transform: translateX(-50%);
-	animation: bounce 2s infinite;
+	animation: fade 2s infinite;
 }
 
-@keyframes bounce {
-	0%,
-	/* 20%, */
-	50%,
-	80%,
+@keyframes fade {
+	0% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
 	100% {
-		transform: translateY(0);
-		transform: rotate(270deg);
-	}
-	40% {
-		transform: translateY(-30px);
-	}
-	60% {
-		transform: translateY(-15px);
+		opacity: 0;
 	}
 }
 @media screen and (max-width: 768px) {
